fix scrollbar style

--- a/src/index.css
+++ b/src/index.css
@@ -89,3 +89,33 @@ body,
   font-weight: 500;
   font-style: normal;
 }
+
+.scrollable-content {
+  scrollbar-gutter: stable;
+  overflow: hidden;
+}
+
+.scrollable-content:hover {
+  overflow-y: auto;
+}
+
+.scrollable-content::-webkit-scrollbar {
+  width: 8px;
+}
+
+.scrollable-content::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.scrollable-content::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 0.5rem;
+}
+
+.scrollable-content::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.scrollable-content::-webkit-scrollbar-button {
+  display: none;
+}
